Pandora's Box 2.6.0 1.20.1 Fabric - change java version